--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.datasource.url=jdbc:postgresql://localhost/sarafan
 spring.datasource.username=sarafan
 spring.datasource.password=sarafan
 spring.jpa.generate-ddl=true
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 security.oauth2.client.client-id=152437688376-df3ldc1o9k1vls3aev0b5372cacfvu8b.apps.googleusercontent.com
-security.oauth2.client.clientSecret=${clientSecret}
+#security.oauth2.client.clientSecret=${clientSecret}
+security.oauth2.client.clientSecret=Oo-MWVpNk7Ta1kK6E5Tw3GXd
 security.oauth2.client.clientAuthenticationScheme=form
 security.oauth2.client.scope=openid,email,profile
 security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
@@ -14,3 +16,7 @@ security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userin
 security.oauth2.resource.preferTokenInfo=true
 
 server.port=9000
+
+#spring.session.jdbc.initialize-schema=always
+#spring.session.jdbc.table-name=SPRING_SESSION
+#spring.session.jdbc.schema=classpath:session_tables.sql
